Added progress with Elliot

--- a/myApp2/www/templates/tab-account.html
+++ b/myApp2/www/templates/tab-account.html
@@ -4,7 +4,7 @@
     <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
     </ion-toggle>
-    <button ion-button ng-click=sendIt()>
+    <button ion-button ng-click=test()>
         Test plugin
     </button>
     </ion-list>
